[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "llm-apps"
version = "0.0.1"
description = "this is a template"
authors = [
  { name = "Abhishek" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["llm-apps"]
include = ["pyproject.toml", "llm-apps/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["llm-apps"]
force-sort-within-sections = true

